# soft-render

./: CMakeLists.txt  README.md
include/softrender/: glSoft.h
src/: glSoft.cpp
